--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # File: docs/requirements.txt
 
 # Defining the exact version will make sure things don't break
-sphinx==4.2.0
-sphinx_rtd_theme==1.0.0
-readthedocs-sphinx-search==0.1.1
+sphinx>=5.0
+sphinx-rtd-theme
+sphinx-intl
+readthedocs-sphinx-search
 doc8
 m2r
 pyyaml
